--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,20 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
+    ext.room_version = '2.1.0-rc01'
+    ext.navigation_version = '1.0.0'
+    ext.kodein_version = '5.2.0'
+    ext.lifecycle_version = '2.0.0'
+    ext.retrofit_version = '2.4.0'
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.0-alpha01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +25,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
 }
 
